--- a/views/select.html
+++ b/views/select.html
@@ -4,6 +4,9 @@
     <div class="control-group">
         <label>Schlagwort: </label>
         <input type="text" ng-model="article.keyword" required/><br/>
-        <button ng-click="articleFind(article.keyword)" ng-disabled="formArticleFind.$invalid">finden</button>
+        <input type="submit" class="btn btn-primary" ng-click="articleFind(article.keyword)" ng-disabled="formArticleFind.$invalid" value="finden">
+    </div>
+    <div class="container" ng-show="!itemsFound()">
+        <h3>Keine Treffer</h3>
     </div>
 </form>
