--- a/views/articles.html
+++ b/views/articles.html
@@ -9,6 +9,10 @@
     <tr ng-repeat="article in articles">
         <td><a href="{{article.href}}">{{article.title}}</a></td>
         <td>{{article.release_date}}</td>
+        <td>
+            <i class="icon-remove remove" ng-click="details(article)"></i>
+        </td>
+
     </tr>
     </tbody>
 </table>
