Added query for details

--- a/views/articles.html
+++ b/views/articles.html
@@ -3,6 +3,7 @@
       <tr>
           <th>Titel</th>
           <th>Veröffentlichung</th>
+          <th>Details</th>
       </tr>
     </thead>
     <tbody>
