--- a/views/articles.html
+++ b/views/articles.html
@@ -8,12 +8,11 @@
     </thead>
     <tbody>
     <tr ng-repeat="article in articles">
-        <td><a href="{{article.href}}">{{article.title}}</a></td>
+        <td><a href="{{article.href}}" target="_blank">{{article.title}}</a></td>
         <td>{{article.release_date}}</td>
         <td>
-            <i class="icon-remove remove" ng-click="details(article)"></i>
+            <i class="icon-hand-right" ng-click="details(article)"></i>
         </td>
-
     </tr>
     </tbody>
 </table>
