--- a/views/details.html
+++ b/views/details.html
@@ -20,3 +20,6 @@
         <td><span ng-repeat="category in article.categories">{{category.name}} </span> </td>
     </tr>
 </table>
+
+
+<div class="textarea"></div>
