--- a/views/details.html
+++ b/views/details.html
@@ -1,3 +1,5 @@
+<p><a class="pull-left btn btn-link" href="/#/articles">&laquo; Zurück</a></p>
+
 <table class="table">
     <tr>
         <td>Titel</td>
@@ -22,4 +24,8 @@
 </table>
 
 
-<textarea class="textarea" placeholder="Enter text ..." style="width: 810px; height: 200px"></textarea>
+<textarea id="annotation" class="textarea" placeholder="Enter text ..." style="width: 810px; height: 200px" ng-model="article.annotation"></textarea>
+
+
+<p><a class="pull-left btn btn-link" href="/#/articles">&laquo; Abbrechen</a>
+    <a class="pull-left btn btn-link" href="/#/articles">&laquo; Abbrechen</a></p>
