--- a/views/details.html
+++ b/views/details.html
@@ -27,5 +27,5 @@
 <textarea id="annotation" class="textarea" placeholder="Enter text ..." style="width: 810px; height: 200px" ng-model="article.annotation"></textarea>
 
 
-<p><a class="pull-left btn btn-link" href="/#/articles">&laquo; Abbrechen</a>
-    <a class="pull-left btn btn-link" href="/#/articles">&laquo; Abbrechen</a></p>
+<p><a class="btn btn-primary" href="/#/articles">Abbrechen</a>
+    <a class="btn btn-primary" ng-click="save(article)">Speichern</a></p>
